# tireless-timingila

./: README.md  pyproject.toml
src/: config.py  main.py  server.py
src/chemistry/: __init__.py  options.json  reactions.json  reactions.py
src/server/: __init__.py  client.py  server.py
src/window/: __init__.py  views.py  window.py
