[tool.poetry]
name = "Tireless Timingila"
version = "0.1.0"
description = ""
authors = ["Ibrahim2750mi", "jason810496 ", "thatbirdguythatuknownot", "rustyxlol"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.*"
arcade = "^2.6.15"
websockets = "^10.3"
nest_asyncio = "^1.5.5"

[tool.poetry.dev-dependencies]
# Base tools
flake8 = "~4.0.1"
isort = "~5.10.1"
pre-commit = "~2.17.0"

# Flake8 plugins, see https://github.com/python-discord/code-jam-template/tree/main#plugin-list
flake8-docstrings = "~1.6.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
